<resources>
    <string name="app_name">Shiftify</string>
    <string name="welcome_label_text">Welcome to Shiftify</string>
    <string name="email_label_text">email</string>
    <string name="first_name_label_text">first name</string>
    <string name="password_label_text">password</string>
    <string name="login_button_label_text">Login</string>
    <string name="register_button_label">Register</string>
    <string name="shifts_menu_item_title">Shifts</string>
    <string name="station_menu_item_title">Station</string>
    <string name="choose_role_label_text">Choose role</string>
    <string name="shift_owner_text">Shift owner</string>
    <string name="nurse_text">Nurse</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="last_name_label_text">last name</string>
    <string name="password2_label_text">password repeat</string>
    <string name="password1_label_text">password</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="station_code_label">station code</string>
    <string name="station_name_label">station name</string>
    <string name="hello_nurse_label">Hello %1$s %2$s</string>
    <string name="logout_button">Logout</string>

    <!-- calendar -->
    <string name="monday_label">Mo</string>
    <string name="tuesday_label">Tu</string>
    <string name="wednesday_label">We</string>
    <string name="thursday_label">Th</string>
    <string name="friday_label">Fr</string>
    <string name="saturday_label">Sa</string>
    <string name="sunday_label">Su</string>

    <!-- shift cards -->
    <string name="early_shift">Early Shift</string>
    <string name="late_shift">Late Shift</string>
    <string name="night_shift">Night Shift</string>
    <string name="free_shift">Free Shift</string>
    <string name="holiday_shift">Holiday Shift</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ok_next"><![CDATA[OK & next]]></string>

    <!-- priority view -->
    <string name="priority_title">Set priorities for %1$s</string>
    <string name="wish_shift_description">Wish Shift</string>
    <string name="high_priority_description">High Priority</string>
    <string name="neutral_priority_description">Neutral Priority</string>
    <string name="negative_priority_description">Negative Priority</string>
    <string name="log_out_item_title">Log out</string>

    <!-- fragment shift owner plan detail priorities -->
    <string name="early_shift_priority_string">Early Shift: %1$d</string>
    <string name="late_shift_priority_string">Late Shift: %1$d</string>
    <string name="night_shift_priority_string">Night Shift: %1$d</string>
    <string name="free_shift_priority_string">Free: %1$d</string>
    <string name="holiday_shift_priority_string">Holiday Shift: %1$d</string>
    <string name="shift_priorities_headline">Shift Priorities for nurses on</string>
</resources>
