<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.shiftowner.RoleChoiceFragment">

    <TextView
        android:id="@+id/choose_role_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/choose_role_label_text"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/shift_owner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_owner_text"
        app:layout_constraintBottom_toTopOf="@+id/nurse_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_role_label" />

    <Button
        android:id="@+id/nurse_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nurse_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shift_owner_button" />

</androidx.constraintlayout.widget.ConstraintLayout>